project/stage/tests/accept/functions_w_var_decls_w_statements/function_call/function_call.ul
void m() {
    id ( expr );
    id ( expr('c') );
    id ( ((expr("STRING") )));
    id ( id ( (( expr ( 1 ) )) ) );
    
    ___VALID_ID (
        ((arg1)),
        "anotherArg123",
        IDENTIFIER1 [ funcCall(0, 'c') ], 
        RATTLED ( true, false, "MEEP")
    );

    ;
}
