project/stage/tests/reject/bad_statements/bad_expr_with_key_access/before_var_decl.ul
void m() {
    expr [ expr ];
    void d = 1;
}
